--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = "0.8.4"
+clap = { version = "4.5.40", features = ["derive"] }
+comrak = "0.39.0"
+facet = "0.27.14"
+notify = "8.0.0"
+notify-debouncer-mini = "0.6.0"
+tokio = { version = "1.45.1", features = ["full"] }
