--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ facet-pretty = "0.23.19"
 notify = "8.0.0"
 notify-debouncer-mini = "0.6.0"
 tokio = { version = "1.45.1", features = ["full"] }
+ulid = "1.2.1"
 
 [dev-dependencies]
 axum-test = "18.0.0-rc3"
