--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ facet-pretty = "0.23.19"
 notify = "8.0.0"
 notify-debouncer-mini = "0.6.0"
 tokio = { version = "1.45.1", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
+async-stream = "0.3"
 ulid = "1.2.1"
 
 [dev-dependencies]
