--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "livemarkdown-rs"
+name = "livemarkdown"
 version = "0.1.0"
 edition = "2024"
 
@@ -15,7 +15,6 @@ notify-debouncer-mini = "0.6.0"
 tokio = { version = "1.45.1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
 async-stream = "0.3"
-ulid = "1.2.1"
 
 [dev-dependencies]
 axum-test = "18.0.0-rc3"
